--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
 
             const galleryImages = [
                 { imageUrl: 'https://files.catbox.moe/hcnl58.jpg', title: 'Image 1' }, // Replace with your image paths
-                { imageUrl: 'image2.jpg', title: 'Image 2' },
-                { imageUrl: 'image3.jpg', title: 'Image 3' },
+                { imageUrl: 'https://files.catbox.moe/m8k5yx.jpg', title: 'Image 2' },
+                { imageUrl: 'https://files.catbox.moe/bywecn.jpg', title: 'Image 3' },
             ];
             React.useEffect(() => {
-                showNotification('Welcome to WANZOFC Payment!');
-                setTimeout(() => showNotification('New payment methods added!'), 5000);
+                showNotification('welcome to wanzofc payment!');
+                setTimeout(() => showNotification('new payment methods added!'), 5000);
             }, []);
 
             const showNotification = (message) => {
@@ -226,8 +226,6 @@
                     }, 300);
                 }, 5000);
             };
-
-
             return (
                 <div className="container mx-auto px-4 py-8 relative" style={{zIndex:1}}>
                     <header className="text-center mb-8">
@@ -240,7 +238,6 @@
                             <PaymentCard key={method.method} method={method.method} number={method.number} icon={method.icon} />
                         ))}
                     </section>
-
                     <section id="gallery" className="mt-8">
                         <h2 className="text-xl font-semibold mb-4 text-white">Gallery</h2>
                         <div className="grid grid-cols-1 md:grid-cols-3 gap-4">
@@ -249,7 +246,6 @@
                             ))}
                         </div>
                     </section>
-
                     <div className="parallax mt-8">
                         <div className="parallax-background"></div>
                         <div className="parallax-foreground"></div> {/* Second parallax layer */}
